--- a/pom.xml
+++ b/pom.xml
@@ -149,13 +149,11 @@
 
 		
 		<!-- JDBC 설정하기 -->
-     <dependency>
-	    <groupId>oracle.jdbc</groupId>
-	    <artifactId>OracleDriver</artifactId>
-	    <version>12.1.0.2.0</version>
-	    <scope>system</scope>
-	    <systemPath>${basedir}/src/main/webapp/WEB-INF/lib/ojdbc8.jar</systemPath>
-      </dependency>
+		<dependency>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>3.1.3</version>
+		</dependency>
 
          <!-- myBatis 설정관련 라이브러리 -->
         <dependency>
