--- a/pom.xml
+++ b/pom.xml
@@ -3,11 +3,11 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.zerock</groupId>
+	<groupId>com.damtuh</groupId>
 	<artifactId>controller</artifactId>
-	<name>ex05</name>
+	<name>damtuh</name>
 	<packaging>war</packaging>
-	<version>1.0.0-BUILD-SNAPSHOT</version>
+	<version>1.0.0</version>
 
 	<properties>
 		<java-version>1.8</java-version>
